Python program works!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = [
     {name = "jeff skoldberg", email = "jeff@gmdata.co"},
 ]
 dependencies = [
-    "snowflake-connector-python>=3.10.1",
     "faker>=25.5.0",
-    "pandas>=2.2.2",
+    "snowflake-connector-python[pandas]>=3.10.1",
+    "python-dotenv>=1.0.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -21,3 +21,8 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "black>=24.4.2",
+]
