Renamed black --check step

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -18,6 +18,6 @@ jobs:
       run: |
         pip install black
 
-    - name: Run Black
+    - name: Check code format vs Black
       run: |
         black --check .
