Runs after PR complete on main

--- a/.github/workflows/update_lambda.yml
+++ b/.github/workflows/update_lambda.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - staging
+  pull_request:
+    branches:
       - main
+    types:
+      - closed
 
 jobs:
   deploy:
