--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ dependencies = [
     "snowflake-connector-python[pandas]>=3.10.1",
     "python-dotenv>=1.0.1",
     "boto3>=1.34.119",
+    "titan @ git+https://github.com/teej/titan.git",
+    "click>=8.1.7",
+    "pyyaml>=6.0.1",
 ]
-requires-python = ">=3.11"
+requires-python = "<3.12,>=3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
